--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 title: 半桶水的博客
 SEOTitle: 半桶水的博客
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
+email: 531671505@qq.com
 description: ""
 keyword: ""
-url: "http://huangxuan.me"              # your host, for absolute URL
+url: "http://skqultra.github.io"              # your host, for absolute URL
 baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 
 
@@ -59,7 +59,7 @@ duoshuo_share: true                     # set to false if you want to use Commen
 
 # Analytics settings
 # Baidu Analytics
-ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
+ba_track_id: 36e58a857d9af98bb980479d0461525a
 # Google Analytics
 # ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
 # ga_domain: huangxuan.me
